# service-io

./: CHANGELOG.md  Cargo.toml  README.md
examples/: email_server.rs  email_to_stdout.rs  stdin_to_email.rs  stdio.rs  use_case.rs
src/: channel.rs  connectors.rs  engine.rs  interface.rs  lib.rs  message.rs  secret_manager.rs  services.rs  util.rs
src/connectors/: debug_stdout.rs  imap.rs  mpsc.rs  smtp.rs  stdin.rs  stdout.rs
src/services/: alarm.rs  echo.rs  process.rs  public_ip.rs
util/: oauth2.py
