[package]
name = "service-io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "io-std", "io-util", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
imap = "2.4"
native-tls = "0.2.8"
mailparse = "0.13"
log = "0.4"
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "tokio1-native-tls", "builder"] }

[dev-dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
